--- a/app/src/main/res/layout/dashboard_piechart_main.xml
+++ b/app/src/main/res/layout/dashboard_piechart_main.xml
@@ -1,8 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<com.github.mikephil.charting.charts.PieChart-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent"-->
-<!--    android:id="@+id/pieChart"/>-->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -37,7 +33,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView">
 
         <!- ProgressBar that represents a total of 100% -->
-        <!--<ProgressBar
+        <ProgressBar
             android:id="@+id/background_progressbar"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="@dimen/chart_width"
@@ -45,15 +41,15 @@
             android:indeterminate="false"
             android:max="100"
             android:progress="100"
-            android:progressDrawable="@drawable/stats_full"
+            android:progressDrawable="@drawable/piechart_full"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <!- ProgressBar that represents a chart slice, where "android:progress" is the % value of the slice -->
-        <!--<ProgressBar
+        <!-- ProgressBar that represents a chart slice, where "android:progress" is the % value of the slice -->
+        <ProgressBar
             android:id="@+id/stats_progressbar"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="@dimen/chart_width"
@@ -61,14 +57,14 @@
             android:indeterminate="false"
             android:max="100"
             android:progress="75"
-            android:progressDrawable="@drawable/stats_progress"
+            android:progressDrawable="@drawable/piechart_progress"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <!- The text that goes in a center of the chart -->
+        <!-- The text that goes in a center of the chart -->
         <!--<TextView
             android:id="@+id/number_of_calories"
             android:layout_width="wrap_content"
